appId: host.exp.exponent
---
- tapOn: "Feed"
- waitForAnimationToEnd
- assertVisible: "Feed"

- tapOn: "Discover"
- waitForAnimationToEnd
- assertVisible: "Users"
- assertVisible: "Cards"

- tapOn: "Messages"
- waitForAnimationToEnd
- assertVisible: "Messages"

- tapOn: "Profile"
- waitForAnimationToEnd
- assertVisible: "Profile"

- tapOn: "Feed"
- waitForAnimationToEnd
- assertVisible: "Feed"