appId: host.exp.exponent
---
- tapOn: "Profile"
- assertVisible: "Profile"

- tapOn: "transfer"
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: "View All"
    direction: DOWN

- tapOn: "View All"
- waitForAnimationToEnd

- assertVisible: "Transactions"

- assertVisible:
    text: "Total"
    optional: true

- tapOn: "Back"
- assertVisible: "Profile"
